# fastapi_k8s_demo

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd-cloudrun.yml  ci-cd-dual.yml  ci-cd-dual.yml.sample  ci-cd.yml  ci-cd.yml.sample
kubernetes/: deployment.yaml  service.yaml
src/app/: main.py
tests/: test_api.py
