[project]
name = "fastapi-demo"
version = "0.1.0"
description = "FastAPI Kubernetes Demo Amsterdam"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
uvicorn = ["uvicorn[standard]"]

[tool.pytest.ini_options]
pythonpath = ["src"]
